horizontal scroll fix

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -17,9 +17,11 @@
 @media screen and (max-width: 627px) {
   .cards {
     margin: 0 auto;
+    
   }
 
   .cards__list {
+    grid-template-columns: repeat(auto-fit, 288px);
     align-items: center;
     justify-content: center;
     gap: 20px 10px;
