--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -123,6 +123,8 @@
 
   .profile__add-btn {
     margin: 0;
+    width: 288px;
+    justify-content: center; 
   }
 
   .profile__edit-btn {
